add images and link CSS and JS in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <div class="ds-header-inner">
          <!-- logo -->
          <a href="index.html" class="ds-logo">
-           <img src="images\Pic.png" alt="My Pic" class="logoPic">Avinash Pinnamaneni
+           <img src="public/images\Pic.png" alt="My Pic" class="logoPic">Avinash Pinnamaneni
          </a>
          <!-- logo -->
          <!-- social -->
@@ -53,7 +53,7 @@
        <div class="row">
          <!-- div for image -->
          <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-           <img src="images\profile-image.jpg">
+           <img src="public/images\profile-image.jpg">
          </div>
          <!-- div for name plate -->
          <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7 ">
@@ -131,7 +131,7 @@
 
        <!-- Internship experience -->
        <div class="row ds-experience-list">
-         <a target=”_blank” href="https://www.vivere.io/"><img class="ds-company-logo" src="images\vivereLogo.jpg" alt="img failed to load"></a>
+         <a target=”_blank” href="https://www.vivere.io/"><img class="ds-company-logo" src="public/images\vivereLogo.jpg" alt="img failed to load"></a>
          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
            <section>
              <span class="ds-year">Oct 2022 - Mar 2023</span>
@@ -153,7 +153,7 @@
        <hr class="ds-small-line">
        <!-- work experience -->
        <div class="row ds-experience-list">
-         <a target=”_blank” href="https://www.bgengineeringind.com/index.html"><img class="ds-company-logo-bg" src="images\bg logo_1.png" alt="img failed"></a>
+         <a target=”_blank” href="https://www.bgengineeringind.com/index.html"><img class="ds-company-logo-bg" src="public/images\bg logo_1.png" alt="img failed"></a>
          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
            <section>
              <span class="ds-year">Jun 2017 - Oct 2021</span>
@@ -181,7 +181,7 @@
 
        <!-- Masters -->
        <div class="row ds-experience-list">
-         <a target=”_blank” href="https://www.ovgu.de/"><img class="ds-unilogo-OVGU" src="images\OVGU Logo.png" alt="img failed"></a>
+         <a target=”_blank” href="https://www.ovgu.de/"><img class="ds-unilogo-OVGU" src="public/images\OVGU Logo.png" alt="img failed"></a>
          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
            <section>
              <span class="ds-year">Oct 2021 - Sept 2023</span>
@@ -205,7 +205,7 @@
        <hr class="ds-small-line">
        <!-- Bachelors -->
        <div class="row ds-experience-list">
-         <a target=”_blank” href="https://sreenidhi.edu.in/"><img class="ds-unilogo-SNIST" src="images\SNIST Logo.jpg" alt="img failed to load"></a>
+         <a target=”_blank” href="https://sreenidhi.edu.in/"><img class="ds-unilogo-SNIST" src="public/images\SNIST Logo.jpg" alt="img failed to load"></a>
          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
            <section>
              <span class="ds-year">Oct 2013 - May 2017</span>
@@ -253,7 +253,7 @@
                </section>
              </div>
              <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-               <figure><img class="ds-project-img" src="images\WCE.JPG"></figure>
+               <figure><img class="ds-project-img" src="public/images\WCE.JPG"></figure>
              </div>
            </div>
          </div>
@@ -269,7 +269,7 @@
                </section>
              </div>
              <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-               <figure><img class="ds-project-img" src="images\seamWelding.jpg" </figure>
+               <figure><img class="ds-project-img" src="public/images\seamWelding.jpg" </figure>
              </div>
            </div>
          </div>
@@ -291,7 +291,7 @@
                </section>
              </div>
              <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-               <figure><img class="ds-project-img" src="images\baja.jpg"></figure>
+               <figure><img class="ds-project-img" src="public/images\baja.jpg"></figure>
              </div>
            </div>
          </div>
@@ -312,7 +312,7 @@
                </ul>
              </div>
              <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-               <figure><img class="ds-project-img" src="images\goKart.jpg"></figure>
+               <figure><img class="ds-project-img" src="public/images\goKart.jpg"></figure>
              </div>
            </div>
          </div>
@@ -332,7 +332,7 @@
          <div class="ds-work-list">
            <div class="row">
              <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-               <figure><img class="ds-project-img" src="" alt="This image is missing"></figure>
+               <figure><img class="ds-project-img" src="" alt="The image is missing"></figure>
              </div>
              <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                <section>
