add fb link to social

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
            <li><a href="https://github.com/AvinashPinnamaneni?tab=repositories" target="_blank"><i class="ri-github-fill"></i></a></li>
            <li><a href="https://stackoverflow.com/users/19736564/avinash-pinnamaneni?tab=summary" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
            <li><a href="https://www.linkedin.com/in/avinash-pinnamaneni-ba475b79/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+           <li><a href="https://www.facebook.com/avinash.p537/" target="_blank"><i class="ri-facebook-fill"></i></a></li>
          </ul>
          <!-- social -->
        </div>
