Update index.html to add CV

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
    <section class="ds-about-section ">
      <div class="ds-button-sec text-center">
-       <a target=”_blank” href="" class="ds-button" download="CV_Avinash_4_7_eng.pdf">Click here for Resume</a>
+       <a target=”_blank” href="CV_Avinash.pdf" class="ds-button" target="_blank">Click here for Resume</a>
        <hr class="ds-big-line">
      </div>
    </section>
