--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <link href="public/CSS/main.css" rel="stylesheet">
    <!-- Description of site -->
    <title>Get to know Avinash Pinnamaneni</title>
-   <link rel="icon" type="image/x-icon" href="public\images\favicon.ico">
+   <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/worker">
 
  </head>
  <!-- Start of body of website -->
