--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
          <div class="ds-work-list">
            <div class="row">
              <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-               <figure><img class="ds-project-img" src="" alt="The image is missing"></figure>
+               <figure><img class="ds-project-img" src="public/images/Weld buggy.png" alt="The image is missing"></figure>
              </div>
              <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                <section>
