--- a/index.html
+++ b/index.html
@@ -386,8 +386,14 @@
                  <p></p>
                  <strong><span class="ds-sub-heading">Project tasks:</span></strong>
                  <ul>
-                   <li class="ds-list-para"></li>
-                   <li class="ds-list-para"></li>
+                   <li class="ds-list-para"> Modular versatile machine to be used for:
+                    <li> Power tilling</li>
+                    <li> Brush Cutting</li>
+                    <li> Spraying</li>
+                    <li> Inter cultivation and </li>
+                    <li> Haulage</li>
+                   </li>
+                   <li class="ds-list-para">To be designed to accomodate custom fitting of components and machines as per consumer needs through provision of PTO in the front and rear side.</li>
                  </ul>
                  <a href="mailto:avinash.p537@gmail.com?subject=suggestionsonminibuggy" class="ds-button">Share your thoughts</a>
                </section>
