update list in mini buggy

--- a/index.html
+++ b/index.html
@@ -387,11 +387,11 @@
                  <strong><span class="ds-sub-heading">Project tasks:</span></strong>
                  <ul>
                    <li class="ds-list-para"> Modular versatile machine to be used for:
-                    <li> Power tilling</li>
+                    <ul><li> Power tilling</li>
                     <li> Brush Cutting</li>
                     <li> Spraying</li>
                     <li> Inter cultivation and </li>
-                    <li> Haulage</li>
+                    <li> Haulage</li></ul>ul>
                    </li>
                    <li class="ds-list-para">To be designed to accomodate custom fitting of components and machines as per consumer needs through provision of PTO in the front and rear side.</li>
                  </ul>
