--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     <li> Brush Cutting</li>
                     <li> Spraying</li>
                     <li> Inter cultivation and </li>
-                    <li> Haulage</li></ul>ul>
+                    <li> Haulage</li></ul>
                    </li>
                    <li class="ds-list-para">To be designed to accomodate custom fitting of components and machines as per consumer needs through provision of PTO in the front and rear side.</li>
                  </ul>
